--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ ul{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
+    overflow: hidden;
 }
 .flex{
     display: flex;
@@ -72,6 +73,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 .primary-button:hover{
     background-color: var(--accent-color-dark);
@@ -103,6 +105,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 .company-logo img{
     width: 200px;
@@ -113,6 +116,9 @@ ul{
 .nav-links ul{
     justify-content: end;
     gap: 40px;
+}
+.nav-toggle{
+    display: none;
 }
 
 
@@ -135,7 +141,7 @@ header{
 }
 
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 
 
@@ -145,8 +151,9 @@ header{
     color: var(--primary-text-color);
 }
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px;
 }
 .logo{
     height: 46px;
@@ -169,7 +176,7 @@ header{
 .features-area{
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 40px;
+    gap: 20px;
     margin-top: 20px;
 }
 
@@ -188,10 +195,10 @@ header{
 
 .big-feature-container{
     gap: 30px;
-
 }
-
-
+#second-big-feature{
+    flex-direction: row-reverse;
+}
 .feature-img img{
     width: 100%;
 }
@@ -201,9 +208,12 @@ header{
     align-items: flex-start;
 }
 
-
+.examples-sec{
+    padding: 80px var(--padding-inline-section);
+}
 .example-header{
     text-align: center;
+    margin-bottom: 40px;
 }
 .example-header h2{
     margin-bottom: 20px;
@@ -211,12 +221,13 @@ header{
 .examples-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 
 .examples-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background-image: url(images/asset\ 20.jpeg);
 }
@@ -236,6 +247,7 @@ header{
     flex-direction: column;
     gap: 30px;
     color: white;
+    text-align: center;
 }
 
 .cta-sec{
@@ -276,4 +288,107 @@ footer{
 .sub-footer-container{
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
+
+
+
+/* maedia query */
+
+@media screen and (max-width: 991px) {
+    h3{
+        font-size: 1.2rem;
+    }
+        .nav-toggle{
+            display: block;
+            margin-right: 20px;
+        }
+        .main-nav{
+            overflow: initial;
+        }
+        .nav-links ul{
+            flex-direction: column;
+        }
+        .nav-links{
+            position: absolute;
+            background-color: white;
+            top: 100%;
+            left: -100%;
+            width: 100%;
+            padding-block: 20px;
+        }
+         .nav-links.active{
+            left: 0;
+            transition: .2sec ease-out;
+         }
+        .examples-area{
+            gap: 20px;
+        }
+        .examples-card{
+            width: calc(50% - 10px);
+            height: 180px;
+        }
+
+        .cta-sec{
+            padding-block: 80px;
+        }
+
+}
+
+@media screen and (max-width: 767px) {
+    .header-sec{
+        flex-direction: column-reverse;
+    }    
+    .header-left{
+        max-width: 100vw;
+        text-align: center;
+    }
+    .primary-button{
+        width: 100%;
+    }
+    .features-card{
+        min-width:calc(50% - 10px);
+    }
+    .big-feature-container{
+        flex-direction: column;
+    }
+    #second-big-feature{
+        flex-direction: column;
+    }
+
+    .footer-container{
+        flex-direction: column;
+        gap: 40px;
+        text-align: center;
+        align-items: center;
+    }   
+    .link-col{
+        align-items: stretch;
+    }   
+}
+
+ @media screen and (max-width: 479px) {
+     :root{
+              --padding-inline-section: 10px
+    }
+     h1{
+          font-size: 2rem;
+     }
+     h2{
+          font-size: 1.5rem;
+    }
+     h3{
+          font-size: 1.5rem;
+     }
+     p{
+          font-size: 1rem;
+     }
+     .features-card{
+        min-width: 100%;
+     }
+     .examples-card{
+        width: 100%;
+     }
+
+
+ }
